# BP

./: #auto_saved_files#  .gitignore  Charger-PowerManagement.kicad_sch  _autosave-connectors.kicad_sch  battery.kicad_sch  boot.kicad_sch  dc_dc.kicad_sch  fp-info-cache  mcu.kicad_sch  obvod.kicad_pro  obvod.kicad_sch  rf.kicad_sch  schematic_symbols.bak  schematic_symbols.kicad_sym  switch.kicad_sch  usb_b.kicad_sch  usb_b_mini.kicad_sch  usb_interface.kicad_sch
footprints.pretty/: MCR-B-S-RA-SMT-CS5A-NF-TR.kicad_mod  RA12131100.kicad_mod  SLW-129956-4A-RA-N-D.kicad_mod
hardware/: #auto_saved_files#  Charger-PowerManagement.kicad_sch  Power_Management.kicad_sch  _autosave-connectors.kicad_sch  battery.kicad_sch  board_connector.kicad_sch  boot.kicad_sch  camera.kicad_sch  dc_dc.kicad_sch  fp-info-cache  grounds.kicad_sch  mcu.kicad_sch  obvod.kicad_prl  obvod.kicad_pro  obvod.kicad_sch  rf.kicad_sch  schematic_symbols.bak  swd.kicad_sch  sym-lib-table  test.kicad_sch  untitled.kicad_sch  usb_b.kicad_sch  usb_c.kicad_sch  usb_interface.kicad_sch  ~obvod.kicad_sch.lck
hardware/PCBs/: fp-info-cache  sym-lib-table
hardware/footprints.pretty/: RA12131100.kicad_mod
hardware/schematics/: Charger-PowerManagement.kicad_sch  battery.kicad_sch  (+15 more)
obvod/: fp-info-cache  grounds.kicad_sch  mcu.kicad_sch  obvod.kicad_pro  swd.kicad_sch  test.kicad_sch  untitled.kicad_sch  usb_c.kicad_sch  usb_interface.kicad_sch
software/: distance.m  si4468_reva2_bidirectional_packet.xml  si4468_reva2_empty_framework.xml
software/ground_station/: CMakeLists.txt  gs.cpp  gs.h  main.cpp
(+470 files in other folders)
